--- a/OOPEksamensOpgave/OOPEksamensOpgave.csproj
+++ b/OOPEksamensOpgave/OOPEksamensOpgave.csproj
@@ -47,6 +47,7 @@
     <Compile Include="InvalidLicensePlateException.cs" />
     <Compile Include="PassengerCar.cs" />
     <Compile Include="PrivatePassengerCar.cs" />
+    <Compile Include="PrivatePerson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Truck.cs" />
