--- a/OOPEksamensOpgave/OOPEksamensOpgave.csproj
+++ b/OOPEksamensOpgave/OOPEksamensOpgave.csproj
@@ -41,17 +41,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AutoCamper.cs" />
-    <Compile Include="Bus.cs" />
-    <Compile Include="BusinessPassengerCar.cs" />
-    <Compile Include="InvalidLicensePlateException.cs" />
-    <Compile Include="PassengerCar.cs" />
-    <Compile Include="PrivatePassengerCar.cs" />
+    <Compile Include="Buyer.cs" />
+    <Compile Include="Company.cs" />
+    <Compile Include="Seller.cs" />
+    <Compile Include="Vehicles\AutoCamper.cs" />
+    <Compile Include="Vehicles\Bus.cs" />
+    <Compile Include="Vehicles\BusinessPassengerCar.cs" />
+    <Compile Include="Vehicles\InvalidLicensePlateException.cs" />
+    <Compile Include="Vehicles\PassengerCar.cs" />
+    <Compile Include="Vehicles\PrivatePassengerCar.cs" />
     <Compile Include="PrivatePerson.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Truck.cs" />
-    <Compile Include="Vehicle.cs" />
+    <Compile Include="Vehicles\Truck.cs" />
+    <Compile Include="Vehicles\Vehicle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
